# Bioprocess_Monitoring_Edge_Mind

./: .gitignore  README.md  main.py  pyproject.toml
knowledge/: golden_batch.md
mcp_server/: server.py
slm_layer/: edge_mind.py
