[project]
name = "bioprocess-monitoring-edge-mind"
version = "0.1.0"
description = "Local SLM intelligence layer for pharma bioprocess monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "fastmcp>=3.4.2",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
]
